Fixed mobile z-index

--- a/app/javascript/styles/_mobile_header.scss
+++ b/app/javascript/styles/_mobile_header.scss
@@ -562,7 +562,7 @@ $nypl-breakpoint-xxlarge: 1600px;
 
   .nav-links-mobile {
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     display: block;
     list-style: none;
     left: 0;
